[package]
name = "message-pusher-rust-example"
version = "1.0.0"
edition = "2021"
authors = ["Message Pusher Contributors"]
description = "Rust example for Message Pusher API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[[bin]]
name = "message_pusher"
path = "src/main.rs"